--- a/pyro/.gitignore
+++ b/pyro/.gitignore
@@ -1,12 +1,23 @@
+# User's personal information
+*.session
+config.ini
+
+# Pyrogram generated code
+pyrogram/api/errors/exceptions/
+pyrogram/api/functions/
+pyrogram/api/types/
+pyrogram/api/all.py
+
+# PyCharm stuff
+.idea/
+
 # Byte-compiled / optimized / DLL files
-config.py
 __pycache__/
 *.py[cod]
 *$py.class
 
 # C extensions
 *.so
-*.session
 
 # Distribution / packaging
 .Python
@@ -47,7 +58,6 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/
 
 # Translations
 *.mo
@@ -55,8 +65,9 @@ coverage.xml
 
 # Django stuff:
 *.log
+.static_storage/
+.media/
 local_settings.py
-db.sqlite3
 
 # Flask stuff:
 instance/
